--- a/Project.toml
+++ b/Project.toml
@@ -9,5 +9,5 @@ Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 
 [compat]
-Oscar = "^0.10.2"
-Hecke = "^0.15.3"
+Oscar = "0.11.0"
+Hecke = "0.15.4"
